# Polymarket-Trading-Bot-Rust

./: .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clear.toml  clob_generator.py  config.example.json  pyproject.toml  temp.json  trade.toml
.github/workflows/: CI.yml  CompatHelper.yml  Documentation.yml  TagBot.yml
deploy/: install-service.sh  polymarket-bot.service  setup-vps.sh  upload.sh
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: lib.rs
src/: activity_stream.rs  api.rs  backtest.rs  circuit_breaker.rs  clob_sdk.rs  config.rs  copy_trading.rs  detector.rs  lib.rs  merge.rs  metrics.rs  models.rs  monitor.rs  rate_limit.rs  retry.rs  rtds.rs  simulation.rs  trader.rs  web_state.rs
