[package]
name = "polymarket-trading-bot"
version = "0.1.0"
edition = "2021"
default-run = "main_sports_trailing"

[[bin]]
name = "main_sports_trailing"
path = "src/bin/main_sports_trailing.rs"

[[bin]]
name = "main_dual_limit_045_same_size"
path = "src/bin/main_dual_limit_045_same_size.rs"

[[bin]]
name = "main_dual_limit_045_5m_btc"
path = "src/bin/main_dual_limit_045_5m_btc.rs"

[[bin]]
name = "main_trailing"
path = "src/bin/main_trailing.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "test_predict_fun"
path = "src/bin/test_predict_fun.rs"

[[bin]]
name = "test_sell"
path = "src/bin/test_sell.rs"

[[bin]]
name = "test_redeem"
path = "src/bin/test_redeem.rs"

[[bin]]
name = "test_allowance"
path = "src/bin/test_allowance.rs"

[[bin]]
name = "test_limit_order"
path = "src/bin/test_limit_order.rs"

[[bin]]
name = "test_merge"
path = "src/bin/test_merge.rs"

[[bin]]
name = "main_copytrading"
path = "src/bin/main_copytrading.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
alloy = { version = "1.3", features = ["full"] }
alloy-contract = "1.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
libloading = "0.8"
toml = "0.8"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
dotenvy = "0.15"