[package]
name = "copytrading-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["csr"]
csr = []

[dependencies]
leptos = { version = "0.6", features = ["csr", "serde"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "Window", "Storage", "Document", "HtmlInputElement", "Element"] }
console_error_panic_hook = "0.1"
